alignment fix

--- a/src/pages/_home/home.scss
+++ b/src/pages/_home/home.scss
@@ -36,7 +36,7 @@ page-home {
         }
     }
     .toggle__btn--blk {
-        padding: 10px !important;
+        padding: 0 !important;
         margin: 0px 0 0 0 !important;
         border-color: #a8a8a8 !important;
         border-bottom: 1px solid #a8a8a8 !important;
@@ -76,7 +76,7 @@ page-home {
                 width: 100%;
                 padding: 8px 0;
                 bottom: 0;
-                position: absolute;
+                position: absolute!important;
                 float: left;
                 font-weight: 300;
                 text-transform: capitalize !important;
