--- a/src/pages/login/sign-up/sign-up.scss
+++ b/src/pages/login/sign-up/sign-up.scss
@@ -56,7 +56,7 @@
         display: inline-block !important;
         border: 1px solid #fff !important;
         .radio {
-            margin: 0px 15px 0px 0px;
+            margin: 0px 5px 0px 0px;
         }
         .item-inner{
             border: 0!important;
